Adds js buttons

--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,7 @@
     <include src="./partials/hero.html"></include>
     <include src="./partials/benefic.html"></include>
     <include src="./partials/solutions.html"></include>
+
+    <include src="./partials/overlay.html"></include>
   </body>
 </html>
