--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,11 @@
     <include src="./partials/hero.html"></include>
     <include src="./partials/benefic.html"></include>
     <include src="./partials/solutions.html"></include>
+    <include src="./partials/business-cases.html"></include>
+    <include src="./partials/blog.html"></include>
+    <include src="./partials/team.html"></include>
+    <include src="./partials/callback.html"></include>
+    <include src="./partials/footer.html"></include>
 
     <include src="./partials/overlay.html"></include>
   </body>
